--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev-server": "webpack-dev-server",
     "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
-    "heroku-postbuild": "yarn run build:prod"
+    "heroku-postbuild": "yarn run build:prod",
+    "eslint": "eslint src/**/*.js --ignore-pattern src/playground/*.js"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -47,12 +48,21 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "cross-env": "5.0.5",
     "dotenv": "4.0.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
+    "eslint": "5.15.1",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "7.12.4",
     "jest": "20.0.4",
+    "prettier": "^1.16.4",
     "react-test-renderer": "16.0.0",
     "webpack-dev-server": "2.5.1"
   }
