--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-sass": "^4.11.0",
     "normalize.css": "7.0.0",
     "numeral": "^2.0.6",
+    "prop-types": "^15.7.2",
     "raf": "3.3.2",
     "react": "15.6.1",
     "react-addons-shallow-compare": "15.6.0",
